--- a/CustomerChat/CustomerChat.csproj
+++ b/CustomerChat/CustomerChat.csproj
@@ -182,6 +182,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AgentController.cs" />
     <Compile Include="Controllers\ChatController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RequestController.cs" />
@@ -189,10 +190,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\JsonFileManager.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Agent.cs" />
+    <Compile Include="Models\AgentAvailableModel.cs" />
     <Compile Include="Models\CustomerRequestViewModel.cs" />
     <Compile Include="Models\DocumentType.cs" />
+    <Compile Include="Models\RequestAgentModel.cs" />
     <Compile Include="Models\RequestModel.cs" />
     <Compile Include="Models\RequestViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -311,7 +315,9 @@
     <Content Include="Scripts\umd\popper-utils.min.js" />
     <Content Include="Scripts\umd\popper.js" />
     <Content Include="Scripts\umd\popper.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -361,9 +367,11 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Views\Request\Create.cshtml" />
     <Content Include="Views\Chat\Index.cshtml" />
+    <Content Include="Views\Agent\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="JsonFilesTemporary\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
